content/main.css
/* ... */
.progress div:first-child{
	
	width:0%;
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
	transition: all 0.3s ease-out;
	
}

.progress div:last-child{
	
	width:100%;
	line-height:15vh;
	text-align:center;
	color: rgba(255, 255, 255, 0.9);
    text-shadow: rgba(0, 0, 0, 0.5) 0 0 5px;
    font-size:2.5vw;
	font-weight:800;
	
}

.splash-content{
	
	width: 35vw;
	display:flex;
	flex-flow:column nowrap;
	font: 2rem / 1 Verdana;
	color:rgba(255,255,255,0.8);
	
}

.splash-content div{
	
	margin-bottom:2vh;
	
}

.splash-content input{
	
transition: all 0.3s ease-out;
width:100%;
padding: 2vmin 0;
margin-bottom:15px;
font: 1.5rem / 1 Verdana;
background:rgba(255,255,255,0.5);
border:none;
border-radius:50px;
color:rgba(0,0,0,0.9);
text-align:center;
	
}


.splash-content input:hover{
	background:rgba(255,255,255,0.8);
	
}


.splash-content-button{
	
flex-grow:1;
transition: all 0.3s ease-out;
padding: 2vmin 2vmin;
border-radius:50px;
font: 1.3rem / 1 Verdana;
text-align:center;
background:rgba(255,255,255,0.2);
cursor:pointer;
color:rgba(0,0,0,0.7);
margin:0.3vh 0;
	
	
}

.splash-content-button:hover{

background:rgba(255,255,255,0.5);

}

.splash-content .close {
	position: relative;
	top: -290px;
	right: -520px;
	cursor: pointer;
}

.splash-content .wrap {
	display: flex;
	flex-direction: column;
	margin: 90px 20px;
}
.splash-content .wrap div {
	margin: 50px;
	cursor: pointer;
}

.mm-timer{
	
	display:flex;
	flex-flow:row nowrap;
	justify-content:center;
	align-items:center;
	background:rgba(255,50,0,0.9);
	font:2.5rem / 1 Verdana;
	color:rgba(255,255,255,0.9);
	text-shadow:rgba(0,0,0,0.3) 0 0 5px;
	padding:1vh 1vw;
	border-radius:15px;
	box-shadow:0 0 25px rgba(0,0,0,0.3);
	
}

.mm-ready{
	
	
	
	
}

.mm-ready-count{
	
	font:5rem / 1 Verdana;
	color:rgba(255,255,255,0.9);
	text-shadow:rgba(0,0,0,0.3) 0 0 5px;
	text-align:center;
	padding:6vh 1vw;
	font-weight:800;
	
	
}

.mm-ready-button {
	
	width:300px;
	margin:auto;
	color:rgba(255,255,255,0.5);
	text-shadow:rgba(0,0,0,0.3) 0 0 5px;
	font: 3rem / 1 Verdana;
	text-align:center;
	transition: all 0.3s ease-out;
	padding:0.9vh 1vw;
	cursor:pointer;
	border-radius:15px;
	box-shadow:0 0 25px rgba(0,0,0,0.3);
	
}

.mm-ready-button:hover {
	
background:rgba(51,255,51,0.5);
color:rgba(255,255,255,0.9);
transform: translate(0,-3px);
box-shadow: 0 20px 40px 0 rgba(51,255,51,0.8);
}

.mm-lobby{
	
	width:100vw;
	height:100vh;
	display:flex;
	flex-flow:column nowrap;
	
}

.mm-lobby-confirm{
	
	

}

.mm-lobby-header{
	
	display:flex;
	flex-flow:row nowrap;
	width:100vw;
	height:25vh;
	justify-content:space-around;
	align-items:center;
	/*padding:3vh 1vw;*/
	
}

.mm-lobby-middle{
	
	display:flex;
	flex-flow:row nowrap;
	justify-content:space-between;
	align-items:center;
	background:rgba(255,255,255,0.1);
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
	width:100vw;
	height:70vh;
	margin-bottom:5vh;
	/*padding:3vh 1vw;*/
	
	
}

.mm-lobby-middle-chat{
	
	display:flex;
	flex-flow:column nowrap;
	justify-content:center;
	width:33.33vw;
	height:70vh;
	
}

.mm-lobby-middle-chat-body{
	
	height:63vh;
	overflow-y:scroll;
	background:rgba(255,255,255,0.1);
	border-radius:3px 3px 0 0;
	
}

.mm-lobby-middle-chat-body-item{
	
	font: 1.5vw / 1 Verdana;
	color: rgba(255, 255, 255, 0.7);
	padding:1.5vh 1vw;
	
}

.mm-lobby-middle-chat-body-item div:first-child{
	
	font-style:italic;
	
}

.mm-lobby-middle-chat-body-item div:last-child{
	
	margin-top:1vh;
	border-radius:3px;
	padding:0.8vh 1vw;
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
	border-radius:0.3vw;
	display:inline-block;
	
}

.mm-lobby-middle-chat-button{
	
	height:7vh;
	width:94%;
	padding:0 3%;
	font: 1.3vw / 1 Verdana;
	background:rgba(255,255,255,0.3);
	border-radius:0 0 3px 3px;
	color: rgba(255, 255, 255, 0.7);
    
	
}

.mm-lobby-ready-button{
	

	
}

.mm-lobby-middle-build{
	
	display:flex;
	flex-flow:column nowrap;
	justify-content:center;
	align-items:center;
	width:33.33vw;
	height:70vh;
	
}

.lobby-build-tab{
	display:flex;
	flex-flow:row nowrap;
	width: 32vw;
	overflow-x: auto;
}

.lobby-build-tab div{
	
	color: rgba(255, 255, 255, 0.5);
    text-shadow: rgba(0, 0, 0, 0.3) 0 0 5px;
    font: 1vw / 1 Verdana;
    text-align: center;
    transition: all 0.3s ease-out;
    padding: 0.8vh 1vw;
	margin:0 0.3vw;
    cursor: pointer;
    border-radius: 1.3vw;
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);

	
}

.mm-lobby-middle-hero{
	
	display:flex;
	flex-flow:row wrap;
	align-items:center;
	width:33.33vw;
	height:70vh;
	overflow-y:scroll;
	
}

.mm-lobby-middle-hero > div{

	width:6.66vw;
	height:6.66vw;
	background-position:center;
	background-repeat:repeat-y;
	background-size:100%;
	cursor:pointer;
	
}

.mm-lobby-header-team{
	
	display:flex;
	flex-flow:row nowrap;
	justify-content:center;
	align-items:center;
	width:45vw;
	
	
}

.mm-lobby-header-team-player{
	
	width:8vw;
	margin:0 0.5vw;
	
}

.mm-lobby-header-team-player-hero{
	
	width:8vw;
	height:8vw;
	border-radius:50%;
	background-size:110%;
	background-position:center;
	background-repeat:no-repeat;
	position:relative;
	
}

.mm-lobby-header-team-player-name{
	padding: 2px;
	margin-top:1vh;
	font: 1vw / 1 Verdana;
	color: #fff;
    text-shadow: rgba(0, 0, 0, 0.3) 0 0 5px;
	text-align:center;
	white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
	
}

.lobby-timer > .mm-timer{
	
	font: 1.5vw / 1 Verdana;
	
}

.lobby-select-hero{
	
background:rgba(51,255,51,0.7);
color:rgba(255,255,255,0.9);
text-align:center;
margin-top:1vh;
border-radius:5px;
cursor:pointer;
	
}

.party{
	width: 100vw;
	height: 40vh;
	display:flex;
	flex-flow:column nowrap;
	justify-content:center;
	align-items:center;
	
}

.party .chat {
	width: 70vw;
	position: absolute;
	bottom: 30px;
	left: 10px;
}
.party .chat input {
	width: 70vw;
	background: #000;
	color: #bbb;
}

.party-middle{
	width: 100vw;
	display:flex;
	flex-flow:row nowrap;
	justify-content: space-around;
	align-items:center;
}

.party-middle-item {
	
	margin:0 1vw;
	
	
}
/* ... */

